<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Madrid Pollution</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="title_menu_madrid_city">MADRID CITY MAP</string>
    <string name="title_menu_madrid_region">MADRID REGION</string>
    <string name="title_menu_pollutants">POLLUTANTS</string>
    <string name="title_menu_regulations">REGULATIONS</string>
    <string name="title_pollution_alert">POLLUTION ALERTS</string>

    <!-- Madrid Map Activity -->
    <string name="error_network_message">No Internet Connection Available</string>
    <string name="error_unknown_message">Failed to obtain data</string>
    <string name="last_hour_mean">Last hourly mean</string>
    <string name="permission_location_explanation">If you want to see your own location in map it is necessary to grant app location permissions.</string>

    <!-- Regulations Activity -->
    <string name="download_boe">Download Real Decreto 102/2011</string>
    <string name="download_directive">Download Directive 2008/50/CE</string>
    <string name="download_no2_regulation">Download NO2 Protocol</string>
    <string name="browse_boe">Browse Royal Decret 102/2011</string>
    <string name="browse_directive">Browse Directive 2008/50/CE</string>
    <string name="browse_no2_regulation">Browse NO2 Regulation</string>

    <string name="regulations_text">The thresholds that are considered a limit in this application correspond to those defined in the European Directive 2008/50/EC and its corresponding implementation in Royal Decree 102/2011. As a quick summary and guidance. They are reflected in the following table but for a thorough and rigorous inquiry you can download and view the texts of both standards in PDF.</string>

    <string name="pollutants">Pollutants</string>
    <string name="limits">Limits</string>
    <string name="units_by_m3">Units/m3</string>

    <string name="colors_code">Color Codes:</string>
    <string name="green_code_text">Value less than half of the limit</string>
    <string name="yellow_code_text">Value larger than half the limit</string>
    <string name="red_code_text">Value equal or larger than limit</string>

    <string name="snackbar_no_pdf_viewer_available">There is no PDF viewer available in this device</string>

    <!-- Pollutants Activity -->
    <string name="pollutants_description">DESCRIPTIONS</string>
    <string name="pollutants_effects">EFFECTS</string>

    <!-- Pollution Alerts Activity -->
    <string name="pollution_alerts_enabled">Notifications for Pollution Alerts Enabled</string>
    <string name="pollution_alerts_disabled">Notifications for Pollution Alerts Disabled</string>

    <string name="speed_limitation">Speed limit of 70 km/h in the M-30 and on the access roads to Madrid, covered inside the M-40.</string>
    <string name="parking_limitation">Vehicle parking ban in SER places in the interior of M-30.</string>
    <string name="circulation_limitation">Restriction of circulation within the central zone (inner area of the M-30) of 50% of all vehicles (even days may move vehicles with number plates end in even numbers and odd days those vehicles whose number plates ends in odd number).</string>
    <string name="taxi_restriction">Restriction of free movement of taxis, except ecotaxis and Eurotaxis, inside the central zone (inner area of the M-30).</string>
    <string name="circulation_restriction">Restriction of circulation within the central zone including M-30 of 50% of all vehicles (even days may move vehicles with number plates end in even numbers and odd days those vehicles whose number plates ends in odd number).</string>
    <string name="activated_scenario_protocol">Activaded scenario %1$s of high level pollution protocol for the day  %2$s:</string>
    <string name="take_in_account_title">Take in account that:</string>
    <string name="pollution_alert_disclaimer">The warnings issued by the city of Madrid may take several hours to be reflected in the app, you can consult the official communications on the web <a href="http://www.mambiente.munimadrid.es">www.mambiente.munimadrid.es</a></string>
    <string name="pollution_alert_protocol_details">You can review the full document that describes the actuation Protocol in case of High Pollution episodes in the Regulations section of this app.</string>

    <!-- GCM -->
    <string name="traffic_restriction_alert">Alerta de Restricciones de Tráfico</string>
    <string name="scenario_type_0">No Alerts or Traffic Restrictions at this time due to Pollution</string>
    <string name="scenario_type_1">Level 1: Speed limitation to 70km/h on M-30 and access</string>
    <string name="scenario_type_2">Level 2: Speed limitation to 70km/h on M-30 and access + Parking Ban in SER zone</string>
    <string name="scenario_type_3">Level 3: Speed limitation to 70km/h on M-30 and access + 50% circulation in the interior of M-30 + Parking Ban in SER zone</string>
    <string name="scenario_type_4">Level 4: Speed limitation to 70km/h on M-30 and access + 50% circulation in the interior and M-30 + Parking Ban in SER zone</string>
    <string name="notification_show_details">Show details</string>

    <!-- Google Play Services not available -->
    <string name="toast_newer_gpservices_version_needed">Sorry but a newer version of Google Play is needed</string>
    <string name="dialog_not_compatible_title">Compatibility problem</string>
    <string name="dialog_not_compatible_content">Sorry, this device is not compatible, probably you don\'t have Google Play Services installed.</string>
    <string name="dialog_ok">OK</string>

    <!-- Future reference -->
    <string name="wikipedia">Texts from Wikipedia under Creative Commons License CC-BY-SA</string>

    <!-- Non Translatable Strings -->
    <string name="SO2" translatable="false">SO2</string>
    <string name="CO" translatable="false">CO</string>
    <string name="NO" translatable="false">NO</string>
    <string name="NO2" translatable="false">NO2</string>
    <string name="PM10" translatable="false">PM10</string>
    <string name="O3" translatable="false">O3</string>
    <string name="TOL" translatable="false">TOL</string>
    <string name="BEN" translatable="false">BEN</string>
    <string name="XIL" translatable="false">XIL</string>
    <string name="HCT" translatable="false">HCT</string>
    <string name="HNM" translatable="false">HNM</string>
    <string name="PM25" translatable="false">PM2,5</string>
    <string name="O3Q" translatable="false">O3Q</string>
    <string name="ug" translatable="false">(µg)</string>
    <string name="mg" translatable="false">(mg)</string>
    <string name="PM10PM25" translatable="false">PM10 y PM2,5</string>


</resources>
