<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_content_alert_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/take_in_account_title"
        android:id="@+id/tv_disclaimer_title"/>


    <LinearLayout
        android:layout_below="@+id/tv_disclaimer_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/shape_primary_circle"
                android:layout_width="5dp"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/tv_pollution_alert_disclaimer"
                android:text="@string/pollution_alert_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/shape_primary_circle"
                android:layout_width="5dp"
                android:layout_height="5dp"/>

            <TextView
                android:text="@string/pollution_alert_protocol_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>